--- a/docker-compose-app.yaml
+++ b/docker-compose-app.yaml
@@ -18,6 +18,42 @@ services:
         networks:
             - appnet
         command: ./app
+    app2:
+        container_name: app2
+        hostname: app2
+        build: .
+        expose:
+            - '9090'
+        ports:
+            - '9091:9090'
+        environment:
+            - DB_HOST_NAME=host.docker.internal
+            - DB_PORT=26257
+            - DB_NAME=defaultdb
+            - DB_USER=root
+            - DB_PWD=welcome123
+            - APP_LISTEN_PORT=9090
+        networks:
+            - appnet
+        command: ./app
+    app3:
+        container_name: app3
+        hostname: app3
+        build: .
+        expose:
+            - '9090'
+        ports:
+            - '9092:9090'
+        environment:
+            - DB_HOST_NAME=host.docker.internal
+            - DB_PORT=26257
+            - DB_NAME=defaultdb
+            - DB_USER=root
+            - DB_PWD=welcome123
+            - APP_LISTEN_PORT=9090
+        networks:
+            - appnet
+        command: ./app
 
 networks:
     appnet:
