--- a/docker-compose-app.yaml
+++ b/docker-compose-app.yaml
@@ -8,7 +8,7 @@ services:
             - '9090'
         environment:
             - DB_HOST_NAME=host.docker.internal
-            - DB_PORT=26257
+            - DB_PORT=9292
             - DB_NAME=defaultdb
             - DB_USER=root
             - DB_PWD=welcome123
@@ -25,7 +25,7 @@ services:
             - '9090'
         environment:
             - DB_HOST_NAME=host.docker.internal
-            - DB_PORT=26257
+            - DB_PORT=9292
             - DB_NAME=defaultdb
             - DB_USER=root
             - DB_PWD=welcome123
@@ -42,7 +42,7 @@ services:
             - '9090'
         environment:
             - DB_HOST_NAME=host.docker.internal
-            - DB_PORT=26257
+            - DB_PORT=9292
             - DB_NAME=defaultdb
             - DB_USER=root
             - DB_PWD=welcome123
@@ -52,14 +52,14 @@ services:
             - appnet
         command: ./app
 
-    envoy:
-        container_name: envoy
-        hostname: envoy
+    app_lb:
+        container_name: app_lb
+        hostname: app_lb
         image: envoyproxy/envoy-dev:e0cc4306253f0318f9dcbc77cf32feb6245c378f
         ports:
             - '9191:9191'
         volumes:
-            - ./envoy.yaml:/etc/envoy/envoy.yaml
+            - ./envoy-app.yaml:/etc/envoy/envoy.yaml
         networks:
             - appnet
 networks:
